@@ -1,62 +1,0 @@
-/*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-package org.apache.solr.client.solrj.embedded;
-
-import org.apache.solr.client.solrj.MultiCoreExampleTestBase;
-import org.apache.solr.client.solrj.SolrServer;
-import org.apache.solr.core.CoreContainer;
-import org.apache.solr.core.SolrCore;
-
-/**
- * This runs SolrServer test using 
- * 
- *
- * @since solr 1.3
- */
-public class MultiCoreEmbeddedTest extends MultiCoreExampleTestBase {
-
-  @Override public void setUp() throws Exception 
-  {
-    // TODO: fix this test to use MockDirectoryFactory
-    System.clearProperty("solr.directoryFactory");
-    super.setUp();
-    setupCoreContainer();
-    SolrCore.log.info("CORES=" + cores + " : " + cores.getCoreNames());
-  }
-  
-  protected void setupCoreContainer() {
-    cores = new CoreContainer();
-    cores.load();
-  }
-  
-  @Override
-  public void tearDown() throws Exception {
-    cores.shutdown();
-    super.tearDown();
-  }
-
-  @Override
-  protected SolrServer createServer(String string) {
-    return new EmbeddedSolrServer( cores, string );
-  } 
-  
-  protected SolrServer getSolrAdmin()
-  {
-    return getSolrCore0();
-  } 
-}
